modified:   blogs.bath.html

--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -94,7 +94,7 @@
         <li class="tabs-title"><a data-tabs-target="panel3" href="#panel3">Phase 2</a></li>
       </ul>
       <div class="tabs-content" data-tabs-content="example-tabs">
-        <div class="tabs-panel" id="panel1">
+        <div class="tabs-panel is-active" id="panel1">
           <div class="card full-width-card">
             <div class="card-divider">
               The original header
