--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -14,7 +14,7 @@
     <!-- Compressed Foundation CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
       integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
-    <link href="./assets/css/style.css" type="text/css" rel="stylesheet">
+    <link href="./assets/css/compiled-style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
