modified:   assets/css/compiled-style.css 	new file:   assets/images/hamburger-decorated.svg 	new file:   assets/images/hamburger-plain.svg 	modified:   index.html 	new file:   portfolio.html 	new file:   university-of-bath.html

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         <div class="row column">
           <div class="header-items">
             <div class="brand">
+              <div class="menu-icon"></div>
               <a href="https://cv.thenotsomiserable.co.uk/">
                 <div id="site-logo" class="logo-1-background logo-1">Rosie Hart CV</div>
               </a>
             </div>
             <nav class="role-nav">
               <ul>
+                <li class="role-nav-item"><a href="portfolio.html">Portfolio</a></li>
                 <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
-                <li class="role-nav-item"><a href="https://www.bath.ac.uk">University of Bath</a></li>
-                <li class="role-nav-item"><a href="https://www.blackswanarts.org.uk">Black Swan Arts</a></li>
               </ul>
             </nav>
           </div>
