modified:   index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         <div class="row column">
           <div class="header-items">
             <div class="brand">
-              <div class="menu-icon"></div>
               <a href="https://cv.thenotsomiserable.co.uk/">
                 <div id="site-logo" class="logo-1-background logo-1">Rosie Hart CV</div>
               </a>
@@ -45,14 +44,14 @@
         <div class="row column">
           <div class="mobile-header-flex">
             <div class="mobile-brand">
+              <div class="menu-icon"></div>
               <div class="logo-3"></div>
             </div>
             <!-- Role navigation -->
             <nav class="role-nav">
               <ul class="dropdown menu" data-dropdown-menu>
+                <li class="role-nav-item"><a href="portfolio.html">Portfolio</a></li>
                 <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
-                <li class="role-nav-item"><a href="https://www.bath.ac.uk">University of Bath</a></li>
-                <li class="role-nav-item"><a href="https://www.blackswanarts.org.uk">Black Swan Arts</a></li>
               </ul>
             </nav>
           </div>
