modified:   assets/css/compiled-style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="row column">
           <div class="mobile-header-flex">
             <div class="mobile-brand">
-              <div class="menu-icon"></div>
+              <div class="hamburger-icon"></div>
               <div class="logo-3"></div>
             </div>
             <!-- Role navigation -->
