modified:   assets/css/compiled-style.css modified:   index.html

--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
           <li>domain and DNS maintenance</li>
           <li>support and set up of PCs, laptops, iPads</li>
           <li>implementation of project management and communication tools such as Trello, Slack and Google Shared
-            Drives
-          </li>
+            Drives</li>
         </ul>
       </div>
     </section>
@@ -167,7 +166,7 @@
       <div class="row">
         <div class="footer-wrapper">
           <div class="footer-items">
-            <p>Copyright 2021</p>
+            <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script></p>
           </div>
         </div>
       </div>
