modified:   assets/css/compiled-style.css modified:   index.html

--- a/index.html
+++ b/index.html
@@ -150,6 +150,18 @@
     <!--Education-->
     <section>
       <h1>Education</h1>
+      <h2>Recent training courses</h2>
+      <div class="tnsm-card">
+        <ul>
+          <li>Sass Essential Training, LinkedIn Learning, 2020</li>
+          <li>JavaScript Essential Training, LinkedIn Learning, 2020</li>
+          <li>JavaScript and JSON Integration Techniques, LinkedIn Learning, 2020</li>
+          <li>JQuery Essential Training, LinkedIn Learning, 2020</li>
+          <li>Learn API Documentation with JSON and XML, LinkedIn Learning, 2020</li>
+          <li>Front-End Engineer Career Path, Codecademy Pro, in progress</li>
+          <li>Learn Ruby, Codecademy Pro, in progress</li>
+        </ul>
+      </div>
       <h2>University</h2>
       <div class="tnsm-card">
         <ul>
@@ -166,7 +178,9 @@
       <div class="row">
         <div class="footer-wrapper">
           <div class="footer-items">
-            <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script></p>
+            <p>Copyright &copy;
+              <script>document.write(new Date().getFullYear())</script>
+            </p>
           </div>
         </div>
       </div>
