new file:   assets/images/card-image-blogs.png new file:   assets/images/card-image-catalogues.png new file:   assets/images/card-image-search.png modified:   blogs.bath.html new file:   component-updates.html new file:   legacy-page-remodel.html modified:   portfolio.html

--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -59,7 +59,7 @@
     <!--Page title-->
     <section id="heading-section">
       <div class="heading">
-        <h1>Blogs</h1>
+        <h1>University of Bath WordPress multisite</h1>
         <h2>Front-end work on blogs.bath.ac.uk</h2>
       </div>
     </section>
