--- a/component-updates.html
+++ b/component-updates.html
@@ -61,76 +61,18 @@
     <!--Page title-->
     <section id="heading-section">
       <div class="heading">
-        <h1>Rosie Hart, portfolio</h1>
-        <h2>Some examples of my recent work.</h2>
+        <h1>Updates to existing components</h1>
+        <h2>Being a Front-end Developer isn't just about creating new components or functionality. Sometimes you need to
+          update existing components for improvements or bug fixes.</h2>
       </div>
     </section>
-    <!--Links to projects-->
-    <section id="project-cards">
-      <h1>Recent projects</h1>
-      <div class="grid-x">
-        <div class="cell medium-6 large-4">
-          <div class="card project-card" style="width: 300px;">
-            <div class="card-divider">
-              University of Bath WordPress multisite
-            </div>
-            <a href="blogs.bath.html">
-              <img src="../assets/images/card-image-blogs.png">
-            </a>
-            <div class="card-section">
-              <h4>This is a card.</h4>
-              <p>It has an easy to override visual style, and is appropriately subdued.</p>
-            </div>
-          </div>
-        </div>
-        <div class="cell medium-6 large-4">
-          <div class="card project-card" style="width: 300px;">
-            <div class="card-divider">
-              Remodelling of legacy pages
-            </div>
-            <a href="legacy-page-remodel.html">
-              <img src="../assets/images/card-image-catalogues.png">
-            </a>
-            <div class="card-section">
-              <h4>This is a card.</h4>
-              <p>It has an easy to override visual style, and is appropriately subdued.</p>
-            </div>
-          </div>
-        </div>
-        <div class="cell medium-6 large-4">
-          <div class="card project-card" style="width: 300px;">
-            <div class="card-divider">
-              Updates to existing components
-            </div>
-            <a href="component-updates.html">
-              <img src="../assets/images/card-image-search.png">
-            </a>
-            <div class="card-section">
-              <h4>This is a card.</h4>
-              <p>It has an easy to override visual style, and is appropriately subdued.</p>
-            </div>
-          </div>
-        </div>
-      </div>
+    <!--Search tray display-->
+    <section id="university-search-tray">
+      <h1>Search tray display on large breakpoint</h1>
     </section>
-    <!--Recent websites-->
-    <section id="project-cards">
-      <h1>Website builds</h1>
-      <p>I take on builds for individual clients, which can be on the client's preferred platform. This has tended to be
-        through WordPress.</p>
-      <h2>Daniel Morley</h2>
-      <h3>Brief</h3>
-      <p>Create a new website for a self-employed artist. The site must include a blog and an online shop.</p>
-      <h3>Details</h3>
-      <p>Lorem ipsum</p>
-      <a href="https://danielmorleyfineart.com/" class="button tnsm-button">Visit Daniel's website</a>
-      <h2>The Write Place</h2>
-      <h3>Brief</h3>
-      <p>Move existing non-profit organisation's site to a supported platform to enable responsive and accessible
-        features and SSL.</p>
-      <h3>Lorem ipsum</h3>
-      <p></p>
-      <a href="https://www.writeplace.org.uk/" class="button tnsm-button">Visit The Write Place's website</a>
+    <!--XHP pinned items-->
+    <section id="xhp-pinned-items">
+      <h1>External homepage pinned item display</h1>
     </section>
 
     <footer>
