modified:   assets/css/compiled-style.css modified:   portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,8 +78,9 @@
               <img src="../assets/images/card-image-blogs.png">
             </a>
             <div class="card-section">
-              <h4>This is a card.</h4>
-              <p>It has an easy to override visual style, and is appropriately subdued.</p>
+              <p>One of my main tasks is to maintain our WordPress multisite install. In addition to maintaining site
+                security through version upgrades, I make front-end changes to approve user experience.</p>
+              <p><a href="blogs.bath.html">Find out more.</a></p>
             </div>
           </div>
         </div>
@@ -92,8 +93,10 @@
               <img src="../assets/images/card-image-catalogues.png">
             </a>
             <div class="card-section">
-              <h4>This is a card.</h4>
-              <p>It has an easy to override visual style, and is appropriately subdued.</p>
+              <p>Most of our main site content uses our in-house platforms. But we have some legacy systems which are
+                not easily adaptable to existing templates. We still need to ensure that this content is accessible, so
+                I've been tasked with re-skinning some of those platforms.</p>
+              <p><a href="legacy-page-remodel.html">Find out more.</a></p>
             </div>
           </div>
         </div>
@@ -106,8 +109,9 @@
               <img src="../assets/images/card-image-search.png">
             </a>
             <div class="card-section">
-              <h4>This is a card.</h4>
-              <p>It has an easy to override visual style, and is appropriately subdued.</p>
+              <p>Many of the projects I am involved in are building on existing components. If we discover a bug or can
+                see an improvement which could benefit our users, we might need to adapt our existing code.</p>
+              <p><a href="component-updates.html">Find out more.</a></p>
             </div>
           </div>
         </div>
@@ -118,18 +122,47 @@
       <h1>Website builds</h1>
       <p>I take on builds for individual clients, which can be on the client's preferred platform. This has tended to be
         through WordPress.</p>
+      <p>I don't currently advertise due to time constraints but have built sites for client who have approached me by
+        word of mouth.</p>
       <h2>Daniel Morley</h2>
       <h3>Brief</h3>
       <p>Create a new website for a self-employed artist. The site must include a blog and an online shop.</p>
       <h3>Details</h3>
-      <p>Lorem ipsum</p>
+      <p>Daniel needed a brand new website. His main requirements were:</p>
+      <ul>
+        <li>to provide a place to view and buy his original artwork and prints</li>
+        <li>to give his customers some insight into his practice and to let them know when and where he is exhibiting
+        </li>
+      </ul>
+      <p>We discussed a range of options including Shopify and Squarespace. We decided to use WordPress due to the
+        flexibility it allows. He wasn't sure that making online purchases would be the primary objective for his
+        customers so didn't want to focus on the site being a shop.</p>
+      <p>The project included:</p>
+      <ul>
+        <li>domain and hosting set-up</li>
+        <li>a purchased theme</li>
+        <li>online shop setup using WooCommerce</li>
+        <li>installing SSL certification</li>
+      </ul>
       <a href="https://danielmorleyfineart.com/" class="button tnsm-button">Visit Daniel's website</a>
       <h2>The Write Place</h2>
       <h3>Brief</h3>
       <p>Move existing non-profit organisation's site to a supported platform to enable responsive and accessible
         features and SSL.</p>
-      <h3>Lorem ipsum</h3>
-      <p></p>
+      <h3>Details</h3>
+      <p>The Write Place, a non-profit writers group had an existing site which was not responsive or accessible. They
+        had a very low budget as they do not receive regular funding. The main focus was to get the content to a
+        platform which would allow them to maintain the site themselves. They also had the pressure of time as their
+        previous hosting provider was no longer able to support their site securely.</p>
+      <p>I used a standard WordPress theme and created a child theme to allow them to give their site a bit of bespoke
+        personality.</p>
+      <p>The project included:</p>
+      <ul>
+        <li>domain transfer and hosting set-up</li>
+        <li>creation of a child theme</li>
+        <li>translating old content to a new site and improving the accessibility</li>
+        <li> installing SSL certification </li>
+      </ul>
       <a href="https://www.writeplace.org.uk/" class="button tnsm-button">Visit The Write Place's website</a>
     </section>
 
