modified:   blogs.bath.html 	modified:   component-updates.html 	modified:   index.html 	modified:   legacy-page-remodel.html 	modified:   portfolio.html

--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -30,9 +30,8 @@
             </div>
             <nav class="role-nav">
               <ul>
-                <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
-                <li class="role-nav-item"><a href="https://www.bath.ac.uk">University of Bath</a></li>
-                <li class="role-nav-item"><a href="https://www.blackswanarts.org.uk">Black Swan Arts</a></li>
+                <li class="role-nav-item"><a href="portfolio.html">Portfolio</a></li>
+                <li class="role-nav-item"><a href="https://cv.thenotsomiserable.co.uk">CV</a></li>
               </ul>
             </nav>
           </div>
@@ -41,17 +40,17 @@
       <div class="mobile-header">
         <div class="row column">
           <div class="mobile-header-flex">
-            <div class="mobile-brand">
-              <div class="logo-3"></div>
-            </div>
+            <div class="hamburger-icon"></div>
             <!-- Role navigation -->
             <nav class="role-nav">
               <ul class="dropdown menu" data-dropdown-menu>
-                <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
-                <li class="role-nav-item"><a href="https://www.bath.ac.uk">University of Bath</a></li>
-                <li class="role-nav-item"><a href="https://www.blackswanarts.org.uk">Black Swan Arts</a></li>
+                <li class="role-nav-item"><a href="portfolio.html">Portfolio</a></li>
+                <li class="role-nav-item"><a href="https://cv.thenotsomiserable.co.uk">CV</a></li>
               </ul>
             </nav>
+            <div class="mobile-brand">
+              <div class="logo-3"></div>
+            </div>
           </div>
         </div>
       </div>
