--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
             <nav class="role-nav">
               <ul>
                 <li class="role-nav-item"><a href="portfolio.html">Portfolio</a></li>
-                <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
+                <li class="role-nav-item"><a href="https://cv.thenotsomiserable.co.uk">CV</a></li>
               </ul>
             </nav>
           </div>
@@ -48,7 +48,7 @@
             <nav class="role-nav">
               <ul class="dropdown menu" data-dropdown-menu>
                 <li class="role-nav-item"><a href="portfolio.html">Portfolio</a></li>
-                <li class="role-nav-item"><a href="https://www.thenotsomiserable.co.uk">The Not So Miserable</a></li>
+                <li class="role-nav-item"><a href="https://cv.thenotsomiserable.co.uk">CV</a></li>
               </ul>
             </nav>
             <div class="mobile-brand">
