--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -151,7 +151,9 @@
       <div class="row">
         <div class="footer-wrapper">
           <div class="footer-items">
-            <p>Copyright 2021</p>
+            <p>Copyright &copy;
+              <script>document.write(new Date().getFullYear())</script>
+            </p>
           </div>
         </div>
       </div>
