new file:   catalogues/programme-list.html new file:   catalogues/programme-overview.html new file:   catalogues/unit-list.html new file:   catalogues/unit-overview.html new file:   catalogues/university-of-bath.css modified:   legacy-page-remodel.html

--- a/legacy-page-remodel.html
+++ b/legacy-page-remodel.html
@@ -65,9 +65,47 @@
         <h2>Using our existing design system to restyle some of our older content.</h2>
       </div>
     </section>
+    <!--Introduction-->
+    <section id="legacy-introduction">
+      <p>Most of the site content for the University of Bath is generated through our two platforms:</p>
+      <ul>
+        <li>Typecase</li>
+        <li>Typecase for Courses</li>
+      </ul>
+      <p>Some of our older content can't be easily adapted for these platforms. Because we need to make our content more
+        accessible and responsive for modern devices, we need to remodel the existing content to: </p>
+      <ul>
+        <li>use our current <a href="https://www.bath.ac.uk/projects/lens-design-system/">Lens design system</a></li>
+        <li>fit <a href="https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Introduction">HTML5
+            DOM</a></li>
+      </ul>
+    </section>
     <!--Programme & unit catalogue-->
     <section id="programme-and-unit-catalogue">
       <h1>Programme &amp; unit catalogue</h1>
+      <p>Our Programme &amp; Unit Catalogue was designed some years ago. Most elements are structured using tables,
+        which don't translate well to smaller screens.</p>
+      <p>I've taken the content from some existing pages and built some prototypes. I've used our existing design
+        system, so that the styling will match the rest of the site. As we update elements, classes, typography and
+        colour on our main site, this content will continue to be aligned.</p>
+      <p>The HTML needed to be remodelled to conform to current DOM standards.</p>
+      <p>These changes are still going through our approval process, which is why I'm only able to provide screenshots
+        at this stage.</p>
+      <h2>Programme list</h2>
+      <p><a href="https://www.bath.ac.uk/catalogues/2021-2022/hl/hl-proglist-ug.html">View a current programme list
+          page.</a></p>
+      <p><a href="catalogues/programme-list.html">View prototype</a></p>
+      <h2>Programme overview</h2>
+      <p><a href="https://www.bath.ac.uk/catalogues/2021-2022/ps/PS-units.html">View a current programme overview
+          page.</a></p>
+      <p><a href="catalogues/programme-overview.html">View prototype</a></p>
+      <h2>Unit list</h2>
+      <p><a href="https://www.bath.ac.uk/catalogues/2021-2022/me/UEME-AFM48.html">View a current unit list page.</a></p>
+      <p><a href="catalogues/unit-list.html">View prototype</a></p>
+      <h2>Unit overview</h2>
+      <p><a href="https://www.bath.ac.uk/catalogues/2021-2022/ph/PH10007.html">View a current unit overview page.</a>
+      </p>
+      <p><a href="catalogues/unit-overview.html">View prototype</a></p>
     </section>
     <!--Postgraduate study-->
     <section id="postgraduate-study">
