modified:   catalogues/programme-list.html modified:   catalogues/programme-overview.html modified:   catalogues/unit-list.html modified:   catalogues/unit-overview.html

--- a/catalogues/programme-list.html
+++ b/catalogues/programme-list.html
@@ -447,14 +447,15 @@
         <div class="flex-wrapper">
           <div class="award-item">
             <a href="https://www.bath.ac.uk/corporate-information/rankings-and-reputation/">
-              <img src="/lens/109/assets/university-of-bath/images/awards/top-ten-league-table-2022.svg"
+              <img
+                src="https://www.bath.ac.uk/lens/109/assets/university-of-bath/images/awards/top-ten-league-table-2022.svg"
                 alt="Top 10 in 3 national league tables 2021" />
             </a>
           </div>
           <div class="award-item">
             <a href="https://www.bath.ac.uk/corporate-information/rankings-and-reputation/">
               <img
-                src="/lens/109/assets/university-of-bath/images/awards/the-complete-university-guide-prospects-2022.svg"
+                src="https://www.bath.ac.uk/lens/109/assets/university-of-bath/images/awards/the-complete-university-guide-prospects-2022.svg"
                 alt="Ranked 6th for graduate prospects 2021, The Times and The Sunday Times" />
             </a>
           </div>
