--- a/catalogues/unit-list.html
+++ b/catalogues/unit-list.html
@@ -678,14 +678,15 @@
         <div class="flex-wrapper">
           <div class="award-item">
             <a href="https://www.bath.ac.uk/corporate-information/rankings-and-reputation/">
-              <img src="/lens/109/assets/university-of-bath/images/awards/top-ten-league-table-2022.svg"
+              <img
+                src="https://www.bath.ac.uk/lens/109/assets/university-of-bath/images/awards/top-ten-league-table-2022.svg"
                 alt="Top 10 in 3 national league tables 2021" />
             </a>
           </div>
           <div class="award-item">
             <a href="https://www.bath.ac.uk/corporate-information/rankings-and-reputation/">
               <img
-                src="/lens/109/assets/university-of-bath/images/awards/the-complete-university-guide-prospects-2022.svg"
+                src="https://www.bath.ac.uk/lens/109/assets/university-of-bath/images/awards/the-complete-university-guide-prospects-2022.svg"
                 alt="Ranked 6th for graduate prospects 2021, The Times and The Sunday Times" />
             </a>
           </div>
@@ -720,7 +721,6 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/js/foundation.min.js"></script>
-    <script src="/lens/109/assets/school-of-management/js/infographics.js"></script>
     <script nonce="WVRYei1IZWp4bndhTkRQbDhqOHMwUUFBQUQ4">
       $(window).on('load', function () {
         $(document).foundation();
