modified:   legacy-page-remodel.html

--- a/legacy-page-remodel.html
+++ b/legacy-page-remodel.html
@@ -93,23 +93,30 @@
         at this stage.</p>
       <h2>Programme list</h2>
       <p><a href="https://www.bath.ac.uk/catalogues/2021-2022/hl/hl-proglist-ug.html">View a current programme list
-          page.</a></p>
+          page</a></p>
       <p><a href="catalogues/programme-list.html">View prototype</a></p>
       <h2>Programme overview</h2>
       <p><a href="https://www.bath.ac.uk/catalogues/2021-2022/ps/PS-units.html">View a current programme overview
-          page.</a></p>
+          page</a></p>
       <p><a href="catalogues/programme-overview.html">View prototype</a></p>
       <h2>Unit list</h2>
-      <p><a href="https://www.bath.ac.uk/catalogues/2021-2022/me/UEME-AFM48.html">View a current unit list page.</a></p>
+      <p><a href="https://www.bath.ac.uk/catalogues/2021-2022/me/UEME-AFM48.html">View a current unit list page</a></p>
       <p><a href="catalogues/unit-list.html">View prototype</a></p>
       <h2>Unit overview</h2>
-      <p><a href="https://www.bath.ac.uk/catalogues/2021-2022/ph/PH10007.html">View a current unit overview page.</a>
+      <p><a href="https://www.bath.ac.uk/catalogues/2021-2022/ph/PH10007.html">View a current unit overview page</a>
       </p>
       <p><a href="catalogues/unit-overview.html">View prototype</a></p>
     </section>
     <!--Postgraduate study-->
     <section id="postgraduate-study">
       <h1>Postgraduate study</h1>
+      <p>Our postgraduate application page uses script to pull in courses which are marked as available. I've used our
+        existing design
+        system, so that the styling will match the rest of the site. As we update elements, classes, typography and
+        colour on our main site, this content will continue to be aligned. </p>
+      <p><a href="https://www.bath.ac.uk/study/pg/applications.pl">View the current postgraduate applications page</a>
+      </p>
+      <p><a href="catalogues/pg-application_.html">View prototype</a></p>
     </section>
 
     <footer>
