--- a/catalogues/pg-application_.html
+++ b/catalogues/pg-application_.html
@@ -904,20 +904,16 @@
         <div class="flex-wrapper">
           <div class="award-item">
             <a href="https://www.bath.ac.uk/corporate-information/rankings-and-reputation/">
-              <img src="/lens/108/assets/university-of-bath/images/awards/guardian-top-10-uk-2020.svg"
-                alt="Top 10 UK University, The Guardian 2020" />
+              <img
+                src="https://www.bath.ac.uk/lens/109/assets/university-of-bath/images/awards/top-ten-league-table-2022.svg"
+                alt="Top 10 in 3 national league tables 2021" />
             </a>
           </div>
           <div class="award-item">
             <a href="https://www.bath.ac.uk/corporate-information/rankings-and-reputation/">
-              <img src="/lens/108/assets/university-of-bath/images/awards/tef-ranking.svg"
-                alt="Teaching Excellence Framework Gold" />
-            </a>
-          </div>
-          <div class="award-item">
-            <a href="https://www.bath.ac.uk/corporate-information/rankings-and-reputation/">
-              <img src="/lens/108/assets/university-of-bath/images/awards/times-graduate-prospects-2020.svg"
-                alt="Top 5 for graduate prospects 2020, The Times and The Sunday Times" />
+              <img
+                src="https://www.bath.ac.uk/lens/109/assets/university-of-bath/images/awards/the-complete-university-guide-prospects-2022.svg"
+                alt="Ranked 6th for graduate prospects 2021, The Times and The Sunday Times" />
             </a>
           </div>
         </div>
