--- a/catalogues/demonstration-link.html
+++ b/catalogues/demonstration-link.html
@@ -17,7 +17,7 @@
     <!-- Compressed Foundation JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
       integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
-    <link href="./assets/css/compiled-style.css" type="text/css" rel="stylesheet">
+    <link href="../assets/css/compiled-style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
@@ -33,7 +33,7 @@
             </div>
             <nav class="role-nav">
               <ul>
-                <li class="role-nav-item"><a href="portfolio.html">Portfolio</a></li>
+                <li class="role-nav-item"><a href="../portfolio.html">Portfolio</a></li>
                 <li class="role-nav-item"><a href="https://cv.thenotsomiserable.co.uk">CV</a></li>
               </ul>
             </nav>
@@ -77,6 +77,6 @@
         </div>
       </div>
     </footer>
-    <script src="./assets/js/script.js"></script>
+    <script src="../assets/js/script.js"></script>
   </body>
 </html>
