modified:   legacy-page-remodel.html

--- a/legacy-page-remodel.html
+++ b/legacy-page-remodel.html
@@ -79,6 +79,10 @@
         <li>fit <a href="https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model/Introduction">HTML5
             DOM</a></li>
       </ul>
+      <div class="callout">
+        <p>These changes are still going through our approval process, which is why I'm only able to provide screenshots
+          at this stage.</p>
+      </div>
     </section>
     <!--Programme & unit catalogue-->
     <section id="programme-and-unit-catalogue">
@@ -89,8 +93,6 @@
         system, so that the styling will match the rest of the site. As we update elements, classes, typography and
         colour on our main site, this content will continue to be aligned.</p>
       <p>The HTML needed to be remodelled to conform to current DOM standards.</p>
-      <p>These changes are still going through our approval process, which is why I'm only able to provide screenshots
-        at this stage.</p>
       <h2>Programme list</h2>
       <p><a href="https://www.bath.ac.uk/catalogues/2021-2022/hl/hl-proglist-ug.html">View a current programme list
           page</a></p>
