modified:legacy-page-remodel.html

--- a/legacy-page-remodel.html
+++ b/legacy-page-remodel.html
@@ -80,8 +80,8 @@
             DOM</a></li>
       </ul>
       <div class="callout">
-        <p>These changes are still going through our approval process, which is why I'm only able to provide screenshots
-          at this stage.</p>
+        <p>These changes are still going through our approval process. All prototypes are for demonstration only. Some
+          links have been replaced with dummy URLs.</p>
       </div>
     </section>
     <!--Programme & unit catalogue-->
