modified:component-updates.html

--- a/component-updates.html
+++ b/component-updates.html
@@ -62,9 +62,13 @@
     <section id="heading-section">
       <div class="heading">
         <h1>Updates to existing components</h1>
-        <h2>Being a Front-end Developer isn't just about creating new components or functionality. Sometimes you need to
-          update existing components for improvements or bug fixes.</h2>
+        <h2>Smaller improvements to increase user experience.</h2>
       </div>
+    </section>
+    <!--Introduction-->
+    <section id="introduction"></section>
+    <p>Being a Front-end Developer isn't just about creating new components or functionality. Sometimes you need to
+      update existing components for improvements or bug fixes.</p>
     </section>
     <!--Search tray display-->
     <section id="university-search-tray">
