modified:component-updates.html

--- a/component-updates.html
+++ b/component-updates.html
@@ -66,9 +66,9 @@
       </div>
     </section>
     <!--Introduction-->
-    <section id="introduction"></section>
-    <p>Being a Front-end Developer isn't just about creating new components or functionality. Sometimes you need to
-      update existing components for improvements or bug fixes.</p>
+    <section id="introduction">
+      <p>Being a Front-end Developer isn't just about creating new components or functionality. Sometimes you need to
+        update existing components for improvements or bug fixes.</p>
     </section>
     <!--Search tray display-->
     <section id="university-search-tray">
