modified:   assets/css/compiled-style.css modified:   component-updates.html

--- a/component-updates.html
+++ b/component-updates.html
@@ -73,28 +73,46 @@
     <!--Search tray display-->
     <section id="university-search-tray">
       <h1>Search tray display on large breakpoint</h1>
-      <p>Users accessing our pages on a large breakpoint and above were complaining that site search was not obvious enough. We decided to change the display so that it always displays the search tray (input field) where there is space to do so.</p>
-      <p>The video shows an archived version of our staff landing page where the user had to click on the icon to show the search tray. Then you will see my changes on the current page. When the screen is reduced to our medium breakpoint, functionality reverts to display just the icon, as there is less space.</p>
-      <div class="responsive-embed">
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/mEPan-ueJ38" frameborder="0" allowfullscreen></iframe>
+      <p>Users accessing our pages on a large breakpoint and above were complaining that site search was not obvious
+        enough. We decided to change the display so that it always displays the search tray (input field) where there is
+        space to do so.</p>
+      <p>The video shows an archived version of our staff landing page where the user had to click on the icon to show
+        the search tray. Then you will see my changes on the current page. When the screen is reduced to our medium
+        breakpoint, functionality reverts to display just the icon, as there is less space.</p>
+      <div class="media-frame">
+        <div class="responsive-embed">
+          <iframe width="420" height="315" src="https://www.youtube.com/embed/mEPan-ueJ38" frameborder="0"
+            allowfullscreen></iframe>
+        </div>
       </div>
     </section>
     <!--XHP pinned items-->
     <section id="xhp-pinned-items">
       <h1>External homepage pinned item display</h1>
-      <p>Whilst we were developing our new external homepage, we needed to ensure that content would be responsive. I looked at </p>
-      <div class="responsive-embed">
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/DddfFJn0hIg" frameborder="0" allowfullscreen></iframe>
+      <p>Whilst we were developing our new external homepage, we needed to ensure that content would be responsive. I
+        looked at </p>
+      <div class="media-frame">
+        <div class="responsive-embed">
+          <iframe width="420" height="315" src="https://www.youtube.com/embed/DddfFJn0hIg" frameborder="0"
+            allowfullscreen></iframe>
+        </div>
       </div>
     </section>
     <!--XHP embed controls-->
     <section id="xhp-embed-controls">
       <h1>Orbit controls for media embed</h1>
-      <p>We opted to use the <a href="https://get.foundation/sites/docs/orbit.html">Foundation Orbit carousel for our video embed section, but we wanted to adapt how the controls are displayed. On larger breakpoints, where there is room, we wanted them to sit outside the embed itself. When the screen size is reduced, the controls shift so they are within the embed frame.</a></p>
-      <div class="responsive-embed">
-        <iframe width="420" height="315" src="https://www.youtube.com/embed/Y0CIeQ9UEXM" frameborder="0" allowfullscreen></iframe>
+      <p>We opted to use the <a href="https://get.foundation/sites/docs/orbit.html">Foundation Orbit carousel for our
+          video embed section, but we wanted to adapt how the controls are displayed. On larger breakpoints, where there
+          is room, we wanted them to sit outside the embed itself. When the screen size is reduced, the controls shift
+          so they are within the embed frame.</a></p>
+      <div class="media-frame">
+        <div class="responsive-embed">
+          <iframe width="420" height="315" src="https://www.youtube.com/embed/Y0CIeQ9UEXM" frameborder="0"
+            allowfullscreen></iframe>
+        </div>
       </div>
     </section>
+
     <footer>
       <div class="row">
         <div class="footer-wrapper">
