modified:   assets/css/compiled-style.css modified:   portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
       <h1>Recent projects</h1>
       <div class="grid-x">
         <div class="cell medium-6 large-4">
-          <div class="card project-card" style="width: 300px;">
+          <div class="card project-card">
             <div class="card-divider">
               University of Bath WordPress multisite
             </div>
@@ -85,7 +85,7 @@
           </div>
         </div>
         <div class="cell medium-6 large-4">
-          <div class="card project-card" style="width: 300px;">
+          <div class="card project-card">
             <div class="card-divider">
               Remodelling of legacy pages
             </div>
@@ -101,7 +101,7 @@
           </div>
         </div>
         <div class="cell medium-6 large-4">
-          <div class="card project-card" style="width: 300px;">
+          <div class="card project-card">
             <div class="card-divider">
               Updates to existing components
             </div>
