new file:   assets/images/moth-logo-horizontal-dark.svg new file:   assets/images/moth-logo-horizontal-light.svg new file:   assets/images/moth-logo-large.svg modified:   blogs.bath.html modified:   component-updates.html modified:   index.html modified:   legacy-page-remodel.html modified:   portfolio.html

--- a/component-updates.html
+++ b/component-updates.html
@@ -117,9 +117,14 @@
       <div class="row">
         <div class="footer-wrapper">
           <div class="footer-items">
-            <p>Copyright &copy;
-              <script>document.write(new Date().getFullYear())</script>
-            </p>
+            <div class="copyright">
+              <p>Copyright &copy;
+                <script>document.write(new Date().getFullYear())</script>
+              </p>
+            </div>
+            <div class="contact-details">
+              <p><a href="mailto:rosie@thenotsomiserable.co.uk">rosie@thenotsomiserable.co.uk</a></p>
+            </div>
           </div>
         </div>
       </div>
