overlay image text

--- a/hero-component.html
+++ b/hero-component.html
@@ -58,17 +58,13 @@
         </div>
       </div>
     </div>
-    <!--Page title-->
-    <section id="heading-section">
-      <div class="heading">
-        <h1>Rosie Hart, CV</h1>
-        <h2>Information about my skills and employment history.</h2>
-      </div>
-    </section>
-    <!--Profile-->
+    <!--Hero-->
     <section>
       <div class="hero">
-        <img class="hero-image" />
+        <div class="hero-image">
+          <h1>Demonstrating a page with a hero image</h1>
+          <h2>Many modern websites use a wide hero image at the top of the page.</h2>
+        </div>
       </div>
     </section>
 
