remove section formatting

--- a/hero-component.html
+++ b/hero-component.html
@@ -59,12 +59,14 @@
       </div>
     </div>
     <!--Hero-->
-      <div class="hero">
-        <div class="hero-image">
+    <div class="hero">
+      <div class="hero-image">
+        <div class="hero-text">
           <h1>Demonstrating a page with a hero image</h1>
           <h2>Many modern websites use a wide hero image at the top of the page.</h2>
         </div>
       </div>
+    </div>
 
     <footer>
       <div class="row">
