--- a/portfolio.html
+++ b/portfolio.html
@@ -117,6 +117,15 @@
         </div>
       </div>
     </section>
+    <!--Components-->
+    <section id="components-for-demonstration">
+      <h1>Components for demonstration</h1>
+      <p>I have created some common components which were not part of any particular live project, but just to
+        demonstrate some of my knowledge. I will be continuing to add to this section.</p>
+      <ul>
+        <li><a href="hero-component.html">Hero component</a></li>
+      </ul>
+    </section>
     <!--Recent websites-->
     <section id="project-cards">
       <h1>Website builds</h1>
