update hero stylings for mobile

--- a/hero-component.html
+++ b/hero-component.html
@@ -67,7 +67,27 @@
         </div>
       </div>
     </div>
-
+    <!--Components-->
+    <section>
+      <h1>Section 1</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc feugiat tortor sed est pharetra dignissim.
+        Vestibulum laoreet pharetra ex eget sodales. Sed pharetra volutpat sapien in efficitur. Pellentesque condimentum
+        imperdiet mauris, at interdum turpis bibendum a. Nam pellentesque scelerisque magna eget sagittis.</p>
+    </section>
+    <!--Components-->
+    <section>
+      <h1>section 2</h1>
+      <p>Nunc justo purus, mollis ut neque cursus, posuere blandit nunc. Phasellus at malesuada nunc. Sed volutpat est
+        et neque blandit, vel rhoncus felis viverra. Curabitur fermentum purus diam, vitae vulputate lacus elementum ut.
+        In nunc odio, tempor sit amet
+         lorem sit amet, luctus bibendum eros. Vestibulum ut ex dui. Proin aliquet interdum
+        sem vitae malesuada.</p>
+        <ul>
+          <li>Duis eu orci</li>
+          <li>Ut ex vulputate varius</li>
+        </ul>
+    </section>
+    <!--Site footer-->
     <footer>
       <div class="row">
         <div class="footer-wrapper">
