test navigation on hero component page

--- a/hero-component.html
+++ b/hero-component.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/normalize.min.css" />
     <title>Rosie Hart CV</title>
     <meta name="description" content="Rosie's latest CV">
     <meta name=”robots” content=”noindex”>
@@ -43,13 +44,16 @@
       <div class="mobile-header">
         <div class="row column">
           <div class="mobile-header-flex">
-            <div class="hamburger-icon"></div>
             <!-- Role navigation -->
             <nav class="role-nav">
-              <ul class="dropdown menu" data-dropdown-menu>
-                <li class="role-nav-item"><a href="portfolio.html">Portfolio</a></li>
-                <li class="role-nav-item"><a href="https://cv.thenotsomiserable.co.uk">CV</a></li>
-              </ul>
+              <input class="hamburger-icon">
+              <label class="hamburger-icon">Open menu</label>
+              <div class="mobile-menu-items">
+                <ul class="dropdown menu" data-dropdown-menu>
+                  <li class="role-nav-item"><a href="portfolio.html">Portfolio</a></li>
+                  <li class="role-nav-item"><a href="https://cv.thenotsomiserable.co.uk">CV</a></li>
+                </ul>
+              </div>
             </nav>
             <div class="mobile-brand">
               <div class="logo-3"></div>
@@ -80,14 +84,15 @@
       <p>Nunc justo purus, mollis ut neque cursus, posuere blandit nunc. Phasellus at malesuada nunc. Sed volutpat est
         et neque blandit, vel rhoncus felis viverra. Curabitur fermentum purus diam, vitae vulputate lacus elementum ut.
         In nunc odio, tempor sit amet
-         lorem sit amet, luctus bibendum eros. Vestibulum ut ex dui. Proin aliquet interdum
+        lorem sit amet, luctus bibendum eros. Vestibulum ut ex dui. Proin aliquet interdum
         sem vitae malesuada.</p>
-        <ul>
-          <li>Duis eu orci</li>
-          <li>Ut ex vulputate varius</li>
-        </ul>
+      <ul>
+        <li>Duis eu orci</li>
+        <li>Ut ex vulputate varius</li>
+      </ul>
     </section>
     <!--Site footer-->
+
     <footer>
       <div class="row">
         <div class="footer-wrapper">
