test navigation on hero component page

--- a/hero-component.html
+++ b/hero-component.html
@@ -44,20 +44,20 @@
       <div class="mobile-header">
         <div class="row column">
           <div class="mobile-header-flex">
+            <div class="mobile-brand">
+              <div class="logo-3"></div>
+            </div>
             <!-- Role navigation -->
-            <nav class="role-nav">
-              <input class="hamburger-icon">
-              <label class="hamburger-icon">Open menu</label>
-              <div class="mobile-menu-items">
+            <nav class="mobile-navigation">
+              <input class="mobile-nav-checkbox" id="mobile-nav" type="checkbox">
+              <label for="mobile-nav-checkbox" class="hamburger-icon" id="hamburger-icon"></label>
+              <div class="mobile-nav-items">
                 <ul class="dropdown menu" data-dropdown-menu>
                   <li class="role-nav-item"><a href="portfolio.html">Portfolio</a></li>
                   <li class="role-nav-item"><a href="https://cv.thenotsomiserable.co.uk">CV</a></li>
                 </ul>
               </div>
             </nav>
-            <div class="mobile-brand">
-              <div class="logo-3"></div>
-            </div>
           </div>
         </div>
       </div>
